fix extraneous scrollbar]

--- a/static/css/place/place.scss
+++ b/static/css/place/place.scss
@@ -259,7 +259,7 @@ $chart-border: 0.5px solid #dee2e6;
 #sidebar-region.fixed {
   position: fixed;
   height: 100vh;
-  overflow-y: scroll;
+  overflow-y: auto;
   top: 0;
 }
 
